--- a/task1.html
+++ b/task1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="task1.css" />
-    <title>MADHAN B - Developer</title>
+    <title>SAI SARAN H A - Developer</title>
   </head>
   <body>
     <div id="header">
@@ -24,7 +24,7 @@
         <div class="header-text">
           <p>Software Engineer</p>
           <h1>
-            Hi, I'm <span>MADHAN B</span><br />
+            Hi, I'm <span>SAI SARAN H A</span><br />
             From India
           </h1>
         </div>
@@ -37,7 +37,7 @@
           </div>
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
-            <p>I'm Madhan B, a B.Tech student in AI & Data Science at RMK Engineering College. As an aspiring software engineer, I am passionate about building impactful solutions that blend innovation with practicality. I believe that technology has the power to transform lives,
+            <p>I'm Saisaran H A a B.Tech student in INFORMATION TECHNOLOGY at RMK Engineering College. As an aspiring software engineer, I am passionate about building impactful solutions that blend innovation with practicality. I believe that technology has the power to transform lives,
                and I'm here to learn, build, and contribute.            </p>
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('skills')">
@@ -76,10 +76,10 @@
               <ul>
                 <li>
                   <span>2023 - 2027</span><br />Bachlor of Technology in
-                  Artificial Intelligence and Data Science at R.M.K Engineering COLLEGE-CHENNAI
+                  INFORMATION TECHNOLOGY  at R.M.K Engineering COLLEGE-CHENNAI
                 </li>
                 <li>
-                  <span>2018 - 2024</span><br />Secondary And Senior Secondary
+                  <span>2022- 2024</span><br />Secondary And Senior Secondary
                   from Velammal Matriculation Higher Secondary School - Chennai
                 </li>
               </ul>
@@ -149,14 +149,14 @@
             <h1 class="sub-title">Contact Me</h1>
             <p>
               <i class="fa-solid fa-paper-plane"></i>contact
-              themadhanb@gmail.com
+              240259.IT@rmkec.ac.in@gmail.com
             </p>
             <div class="social-icons">
               </a>
-              <a href=https://www.instagram.com/_mddy.__/?hl=en"
+              <a href=https://www.instagram.com im_saisaran_7 ?hl=en"
                 ><i class="fab fa-instagram"></i
               ></a>
-              <a href="www.linkedin.com/in/themadhanb"
+              <a href="www.linkedin.com/in/saisaran h a"
                 ><i class="fab fa-linkedin"></i
               ></a>
             </div>
@@ -185,7 +185,7 @@
       </div>
       <div class="copyright">
         <p>
-          Copyright @Madhan    Made By Madhan <i class="fa-solid fa-heart"></i>
+          Copyright @Saisaran   Made By Saisaran<i class="fa-solid fa-heart"></i>
         </p>
       </div>
     </div>
